# hakuroukun

./: .gitignore  README.md
MATLAB/: CalculatePath.m  CalculatePhi.m  CreateMapPoints.m  Demo.m  Demo_2.m  Demo_3.m  Demo_4.m  DynamicWindowApproach.m  Function.m  GenerateGoal.m  GetPosition.m  GetTheta.m  LoopRun.m  ObstacleOdomLeft.m  ObstacleOdomRight.m  ReadLidar.m  ReadTheta.m  Run.m  Run2.m  Run3.m  RunDWA.m  RunSpiralTest.m  Run_Hisaya.m  Run_Hisaya_.m  Run_NonHoi2.m  Run_Nonhoi.m  Run_RunDWA.m  Run_TUT2.m  TUT_ex.m  Test_turn.m  WriteToCsv.m  (+4 more)
src/controller/model_predictive_contouring_control/: CMakeLists.txt  package.xml
src/controller/model_predictive_contouring_control/config/: bounds.json  config.json  cost.json  model.json  normalization.json  uturn.json
src/controller/model_predictive_contouring_control/include/model_predictive_contouring_control/: arc_length_spline.h  config.h  constraints_test.h  cost.h  cost_test.h  hpipm_interface.h  model.h  mpc.h  params.h  plotting.h  spline_test.h  track.h  types.h
src/controller/model_predictive_contouring_control/src/: arc_length_spline.cpp  bounds.cpp  constraints.cpp  constraints_test.cpp  cost.cpp  cost_test.cpp  cubic_spline.cpp  hpipm_interface.cpp  integrator.cpp  main.cpp  model.cpp  model_integrator_test.cpp  mpc.cpp  mpcc_controller_node.cpp  params.cpp  plotting.cpp  soft_constraints.cpp  solver_interface.cpp  spline_test.cpp  track.cpp  types.cpp
src/hakuroukun_communication/: CMakeLists.txt  README.md  package.xml  setup.py
src/hakuroukun_communication/firmware/: main2.ino  manualmode.ino  test.ino
src/hakuroukun_communication/firmware/automode/: automode.ino
src/hakuroukun_communication/firmware/main/: main.ino
src/hakuroukun_communication/firmware/main2/: main2.ino
src/hakuroukun_communication/firmware/manualmode/: manualmode.ino
src/hakuroukun_communication/firmware/motor_control/: motor_control.ino
src/hakuroukun_communication/firmware/test/: test.ino
src/hakuroukun_communication/launch/: hakuroukun_communication.launch  hakuroukun_control.launch
src/hakuroukun_communication/scripts/: hakuroukun_communication_node
src/hakuroukun_communication/src/backup/: hakuroukun_communication_node.py
src/hakuroukun_communication/src/hakuroukun_communication/: hakuroukun_communication_node.py
src/hakuroukun_control/: CMakeLists.txt  README.md  package.xml  setup.py
src/hakuroukun_control/config/: ackermann_control.yaml  gazebo.yaml  steering_and_wheel_control.yaml
src/hakuroukun_control/hakuroukun_control/: dynamic_window_approach.py  feed_forward.py  hakuroukun_control.py  pure_pursuit.py
src/hakuroukun_control/include/: QuadProg++.h  model.h  mpc.h  osqp++.h
src/hakuroukun_control/launch/: controL_gui.launch  control.launch  hakuroukun_control.launch  trajectory_publish.launch
src/hakuroukun_control/scripts/: hakuroukun_control_node
src/hakuroukun_control/src/: controller_node.cpp  model.cpp  mpc.cpp  trajectory_pub_node.cpp
src/hakuroukun_control/src/hakuroukun_control/: hakuroukun_control_node.py
src/hakuroukun_control/src/test/: Array.cpp  QuadProg++.cpp  osqp++.cpp  test_controller.cpp  test_model.cpp  test_mpc.cpp  test_trajectory_pub.cpp
src/hakuroukun_control/trajectories/: bicycle_l_shape_1s.csv  bicycle_l_shape_5_10_1s.csv  bicycle_l_shape_5_15_1s.csv  bicycle_l_shape_ep0.25_1s.csv  bicycle_l_shape_ep0.4_1s.csv
src/hakuroukun_description/: CMakeLists.txt  package.xml
src/hakuroukun_description/config/: ros_controllers.yaml
src/hakuroukun_description/launch/: description.launch  rviz_demo.launch  with_controller.launch
src/hakuroukun_description/meshes/: base_link.stl  front_wheel.stl  new_base_link.stl  new_rear.stl  rear_left_wheel.stl  rear_right_wheel.stl  steering.stl
src/hakuroukun_description/urdf/: actuators_wheels.xacro  colors.xacro  hakuroukun.urdf.xacro  hakuroukun_inertia_box.xacro  properties.xacro  sensors.xacro
src/hakuroukun_description/urdf/backup/: hakuroukun.urdf.xacro
src/hakuroukun_localization/hakuroukun_localization/: CMakeLists.txt  package.xml
src/hakuroukun_localization/hakuroukun_localization/config/: ekf_global_params.yaml  ekf_local_params.yaml  navsat_transform_params.yaml
src/hakuroukun_localization/hakuroukun_localization/launch/: ekf_localization.launch
src/hakuroukun_localization/hakuroukun_pose/: CMakeLists.txt  package.xml  setup.py
src/hakuroukun_localization/hakuroukun_pose/hakuroukun_pose/: hakuroukun_pose.py
src/hakuroukun_localization/hakuroukun_pose/launch/: hakuroukun_pose.launch
src/hakuroukun_localization/hakuroukun_pose/log_data/: .~lock.PP.csv#  .~lock.position_log_20241030_11-44.csv#  DWA.csv  PP.csv  README.md  position_log_20241030_09-46.csv  position_log_20241030_09-52.csv  position_log_20241030_09-53.csv  position_log_20241030_09-59.csv  position_log_20241030_10-07.csv  position_log_20241030_11-39.csv  position_log_20241030_11-41.csv  position_log_20241030_11-43.csv  position_log_20241030_11-44.csv  position_log_20241030_11-47.csv  position_log_20241030_11-53.csv  position_log_20241030_12-01.csv  position_log_20241030_12-05.csv  position_log_20241030_12-28.csv  position_log_20241030_12-33.csv  position_log_20241030_12-39.csv  position_log_20241030_12-44.csv  position_log_20241030_12-48.csv  position_log_20241030_12-52.csv
src/hakuroukun_localization/hakuroukun_pose/scripts/: hakuroukun_pose_node
src/hakuroukun_localization/hakuroukun_pose/src/hakuroukun_pose/: hakuroukun_pose_node.py
src/hakuroukun_perception/traffic_cones_detection/: CMakeLists.txt  package.xml  setup.py  train.ipynb
src/hakuroukun_perception/traffic_cones_detection/scripts/: traffic_cones_detection_node
src/hakuroukun_perception/traffic_cones_detection/traffic_cones_detection/: traffic_cones_detection.py
src/hakuroukun_sensor/tsnd151_imu/: CMakeLists.txt  package.xml
src/hakuroukun_sensor/tsnd151_imu/launch/: tsnd151_imu.launch
src/hakuroukun_sensor/tsnd151_imu/src/: tsnd151_imu.py  tsnd151_imu_node.py
src/sdv_msgs/: CMakeLists.txt  package.xml
src/sdv_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
(+181 files in other folders)
