<?xml version="1.0"?>
<package format="2">
  <name>hakuroukun_localization</name>
  <version>0.0.0</version>
  <description>The hakuroukun_localization package</description>
  <maintainer email="tran.viet.thanh.du@tut.jp">Tran Viet Thanh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
