<?xml version="1.0"?>
<package format="2">
  <name>traffic_cones_detection</name>
  <version>1.0.0</version>
  <description>The traffic_cones_detection package</description>
  <maintainer email="tran.viet.thanh.du@tut.jp">Tran Thanh</maintainer>
  <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>

    <exec_depend>rospy</exec_depend>

    <export>
        <build_type>catkin</build_type>
    </export>

</package>
